--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --loader tsx ./node_modules/knex/bin/cli.js",
-    "lint": "eslint src --ext .ts --fix"
+    "lint": "eslint src --ext .ts --fix",
+    "test": "vitest",
+    "build": "tsup src -d build"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,9 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.10.6",
+    "@types/supertest": "^6.0.2",
     "eslint": "^8.56.0",
+    "tsup": "^8.0.2",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
@@ -24,6 +28,8 @@
     "fastify": "^4.25.2",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7-rc.0",
+    "supertest": "^6.3.4",
+    "vitest": "^1.5.0",
     "zod": "^3.22.4"
   }
 }
